fix hero landscape on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -24,12 +24,8 @@
         padding-left: 25px;
     }
 
-    .hero {
-        height: 70%;
-    }
-
     .hero .hero-content {
-        padding-top: 50%;
+        padding-top: 70%;
     }
 
     .header-nav {
